--- a/styles.css
+++ b/styles.css
@@ -206,6 +206,10 @@ body {
     position: relative;
     z-index: 2;
     margin-top: 2vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
 }
 
 
